fixed overflow issue on front end switch

--- a/public/stylesheets/tearma_style.css
+++ b/public/stylesheets/tearma_style.css
@@ -23,7 +23,7 @@
 }
 
 .options {
-    width: 20%;
+    width: 25%;
     height: auto;
     margin: 1em auto auto;
     padding: 0.75em 0.5em 0.5em;
